# rust_embedded

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config.toml
embassy/: Cargo.toml
embassy/src/: bh1750fvi.rs  cmd.rs  led.rs  lib.rs  uart.rs
led_counter/: Cargo.toml
led_counter/src/: main.rs
src/: main.rs
