[package]
edition = "2021"
name = "led_blinking"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "led_blinking"
test = false
bench = false

#[[bin]]
#name = "uart_echoing"
#test = false
#bench = false


[dependencies]
# Important: stm32f767zi is the chip name used here and it has to be changed if another stm is used instead
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f767zi",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
#embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.6.3", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
#embassy-net = { version = "0.5.0", features = [
#    "defmt",
#    "tcp",
#    "dhcpv4",
#    "medium-ethernet",
#] }
#embassy-usb = { version = "0.3.0", features = ["defmt"] }
#embassy-futures = { version = "0.1.0" }

#embedded-io-async = { version = "0.6.1" }

defmt = "0.3"
defmt-rtt = "0.4"

heapless = "0.8"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d3f0294fb12e060c4a3ba557ff95766d1c3686e0" }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "d3f0294fb12e060c4a3ba557ff95766d1c3686e0" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d3f0294fb12e060c4a3ba557ff95766d1c3686e0" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "d3f0294fb12e060c4a3ba557ff95766d1c3686e0" }
#embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "d3f0294fb12e060c4a3ba557ff95766d1c3686e0" }
#embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "d3f0294fb12e060c4a3ba557ff95766d1c3686e0" }
#embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "d3f0294fb12e060c4a3ba557ff95766d1c3686e0" }
