[package]
authors = ["Tim Janus <tim@janus.rs>"]
edition = "2018"
readme = "README.md"
name = "led_counter"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
panic-semihosting = { version = "0.6", features = ["exit"] }

[dependencies.stm32f7]
version = "0.15.1"
features = ["stm32f7x7"]

# this lets you use `cargo fix`!
[[bin]]
name = "led_counter"
test = false
bench = false
